package model.player;

import java.util.ArrayList;

import games.GamePlayersProvider;
import games.IPlayerGeneral;

public class ListPlayers implements GamePlayersProvider{
 
    public ArrayList<IPlayerGeneral> getPlayersGeneralList(int amountPlayers){
        //hacer un for que vaya preguntando mediante el controlador el metodo getone
        //obteniendo jugadores y agregandolos al arraylist que luego devolvera
        return null;
    }

}
