
public class IGiverable implements IHangmanPlayer{
    
    public String selectWord(){
        return null;
    }


}
