public interface IGuesserable {
 
    
    
}
