package interfaces;

public interface IHangmanPlayer {
    
    public void selectWord();
    public void tryLetter();
    public void guessWord();
    public void askForAHint();

}
